--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Release 2.4.6 (2021-12-27)
+--------------------------
+Use shorter app name (#217)
+Update copyright notices to 2022 (#216)
+
 Release 2.4.5 (2021-12-22)
 --------------------------
 Fix how headers are stringified in the collector payload (#210)
