Prepare for 2.9.0 release

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,24 @@
+Release 2.9.0 (2023-04-11)
+--------------------------
+Bump protobuf-java to 3.21.7 (#308)
+PubSub: add second layer of retry (#304)
+Replace set-output in Github Actions (#305)
+Make MaxRetries configurable (#295)
+Use sbt-snowplow-release to build docker images (#302)
+Update /sink-health endpoint logic (#276)
+Integration tests should work with both regular and distroless project (#301)
+Scan Docker images with Snyk container monitor in deploy.yml (#296)
+Add integration tests for Set-Cookie (#287)
+Add integration test for doNotTrackCookie (#289)
+Add integration test for X-Forwarded-For (#288)
+Add integration test for custom paths (#286)
+Add integration test for /health endpoint (#285)
+Kinesis: add integration tests (#283)
+Validate cookie.fallbackDomain config option on startup (#278)
+PubSub: add integration tests (#274)
+PubSub: make it possible to use PubSub emulator (#270)
+Put MaxBytes in default application.conf instead of hard coding it (#272)
+
 Release 2.8.2 (2022-11-03)
 --------------------------
 Ensure docker images have latest libexpat version (#268)
