--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Release 2.9.1 (2023-08-03)
+--------------------------
+PubSub: use debug for logging the inserts (#321)
+Run background check for Kinesis if it is made unhealthy and SQS buffer is activated (#315)
+
 Release 2.9.0 (2023-04-11)
 --------------------------
 Bump protobuf-java to 3.21.7 (#308)
