--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Release 2.9.2 (2023-08-25)
+--------------------------
+Add ability to set custom tags for statsd metrics (#340)
+
 Release 2.9.1 (2023-08-03)
 --------------------------
 PubSub: use debug for logging the inserts (#321)
