--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Release 2.10.0 (2023-11-08)
+--------------------------
+Update the Pubsub UserAgent format (#362)
+Bump sbt-snowplow-release to 0.3.1 (#363)
+
 Release 2.9.2 (2023-08-25)
 --------------------------
 Add ability to set custom tags for statsd metrics (#340)
