Prepare for 3.0.0 release

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,44 @@
+Release 3.0.0 (2024-01-08)
+--------------------------
+Add mandatory SLULA license acceptance flag (close #405)
+Remove unused warmup config section
+Use shortname for collector name (close #403)
+Add statsd metrics reporting (close #404)
+Add support for Do Not Track cookie (close #400)
+Add crossdomain.xml support (close #399)
+Add http root response (close #397)
+Deploy 2.13 scala assets to GH on CI (close #392)
+Use correct sqs buffer queue name with Kinesis bad sink (close #393)
+Sbt project modernization (close #361)
+Update the Pubsub UserAgent format (close #362)
+Add separate good/bad sink configurations (close #388)
+Add Kafka sink healthcheck (close #387)
+Make maxConnections and idleTimeout configurable (close #386)
+Add support for handling /robots.txt (close #385)
+Set installation id (close #384)
+Set maxBytes in the NsqSink (close #383)
+Add http4s Kafka support (close #382)
+Add http4s NSQ support (close #348)
+Add telemetry support (close #381)
+Use Blaze as default http4s backend (close #380)
+Add http4s SQS sink (close #378)
+Add http4s Kinesis sink (close #379)
+Add iglu routes spec (close #377)
+Add http4s PubSub sink (close #376)
+Add http4s SSL support (close #374)
+Add http4s redirect support (close #373)
+Load config (close #326)
+Add http4s anonymous tracking (close #372)
+Add http4s CORS support (close #371)
+Add http4s pixel endpoint (close #370)
+Add http4s GET and HEAD endpoints (close #369)
+Configure set-cookie header (close #368)
+Add test for the stdout sink (close #367)
+Add http4s POST endpoint (close #366)
+Add http4s graceful shutdown (close #365)
+Add http4s module (close #364)
+Add Snowplow Limited Use License (close #346)
+
 Release 2.10.0 (2023-11-08)
 --------------------------
 Update the Pubsub UserAgent format (#362)
