--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Release 3.0.1 (2024-01-10)
+--------------------------
+Remove unnecessary argument (#407)
+
 Release 3.0.0 (2024-01-08)
 --------------------------
 Add mandatory SLULA license acceptance flag (close #405)
