Prepare for 3.1.1 release

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
-Release 3.0.1 (2024-01-10)
+Release 3.1.1 (2024-02-20)
++--------------------------
+Upcase cookie header name (#412)
+
+Release 3.1.0 (2024-01-25)
 --------------------------
 Add an option to send HSTS header (#408)
 
