Prepare for 3.2.0 release

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,16 @@
+Release 3.2.0 (2024-03-11)
++--------------------------
+Bump transitive jnr-posix to 3.1.8 (#419)
+Add snowman job for tag builds
+Prevent Kafka sink from blocking (#418)
+Allow setting size limit on line and header length (#417)
+Add debug logging and timeout configurations (#417)
+Add timeout for body parsing (#417)
+Expand default time limit (#417)
+Cross compile to scala 2.12
+Log cats-effect warning at debug level (#414)
+collector-kafka: authenticate with Event Hubs using OAuth2 (#401)
+
 Release 3.1.2 (2024-02-22)
 +--------------------------
 Improve relative redirect in cookie bounce feature (#413)
